# P7

./: .gitignore  LICENSE  P7.cabal  README.md  cabal.project.local
src/: Main.hs
