cabal-version:       2.4

name:                P7
version:             0.1.0.0
synopsis:            Visual showcase of Newtons method
description:         Visual showcase of Newtons method.
homepage:            https://github.com/sandalbanditten/P7
bug-reports:         https://github.com/sandalbanditten/P7/issues
license:             MIT
license-file:        LICENSE
author:              Tobias Clasen
maintainer:          sandalbanditten@tutanota.com
category:            Visual
build-type:          Simple
extra-doc-files:
  README.md

executable NAME
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -dynamic
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:    base
                    , gloss
